crates/biome_cli/tests/snapshots/main_cases_tailwind_directives/should_not_parse_tailwind_directive_when_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format input.css
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "css": {
    "parser": {
      "tailwindDirectives": false
    }
  }
}
```

## `input.css`

```css
@theme {}
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - input.css
  


```

# Emitted Messages

```block
input.css:1:2 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Tailwind-specific syntax is disabled.
  
  > 1 │ @theme {}
      │  ^^^^^^^^
  
  i Enable `tailwindDirectives` in the css parser options, or remove this if you are not using Tailwind CSS.
  

```

```block
input.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
