crates/biome_cli/tests/snapshots/main_cases_tailwind_directives/should_parse_tailwind_directive.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --css-formatter-enabled=true input.css
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "css": {
    "parser": {
      "tailwindDirectives": true
    }
  }
}
```

## `input.css`

```css
@theme {}
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
input.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - @theme·{}
      1 │ + @theme·{
      2 │ + }
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
