crates/biome_cli/tests/snapshots/main_cases_tailwind_directives/tw_should_not_show_unknown_at_rule_diagnostic.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint input.css
```

## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "suspicious": {
        "noUnknownAtRules": "warn"
      }
    }
  },
  "css": {
    "parser": {
      "tailwindDirectives": true
    }
  }
}
```

## `input.css`

```css
@theme {}
```

# Emitted Messages

```block
biome.json:2:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │     "linter": {
       │               ^
   > 3 │         "enabled": true,
   > 4 │         "rules": {
        ...
   > 9 │         }
  > 10 │     },
       │     ^
    11 │     "css": {
    12 │         "parser": {
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
